--- a/app/views/static_pages/list_debates.html.erb
+++ b/app/views/static_pages/list_debates.html.erb
@@ -1,38 +1,25 @@
-<%= will_paginate @debates%>
 <div class="container" id="index-doulins">
 	<div class="row" id="open-infos">
 		<div class="span11" id="informations-doulin">
-			<div class="span3" id="informations-doulin1">
-				<div class="texte">
-					Débats Ouverts
-					comment ça marche ?				
+			<div class="row" id="informations-challenge">
+				<div class ="span9" id="textexp">
+					Débats Ouverts, comment ça marche ?				
 				</div>
-				<div class="texte2">
-					1- Je choisis mon débat</br>
-					2- Je vote: Pour, Contre ou Suisse</br>
-					3- J'apporte mon argument !</br>
-				</div>
-			</div>
-			
-			<div class="span4" id="informations-doulin2">
-			</div>
-			<div class="span4" id="informations-doulin3">
-			</div>
-			<div class="span1" id="fermer-explication">
+			 	<div class="span1" id="fermer-explication">
 				X
+				</div>
+		    </div>
+			<div class="row" id="ouvrons-encore">
+				<div class="image-gauche">
+					<%= image_tag("explication-3-01.png", class: "fleche10")%>
+				
+				</div>
 			</div>
 		</div>
 	</div>
 	
 	<div class="row" id="intro-doulin">
 		<div class="texte">Débats Ouverts pour gens d'esprit</div>
-		<div class="ouvrir-informations">
-			<div class="circle">
-					<div class="texte2">
-						?
-					</div>
-			</div>
-		</div>
 	</div>
 	
 				<div class="row" id= "for-badges">
