--- a/app/views/challenges/_form.html.erb
+++ b/app/views/challenges/_form.html.erb
@@ -20,7 +20,7 @@
 								</label>
 							
 							<%= radio_button_tag "challenge[type_deb]", 3, challenge.type_deb == 3 %>
-							<label for="challenge_type_deb_3" class="non-selected" id="choix2"><span class= "texte">Duel</br>par équipe</span><%= image_tag ("new-challenge.png"), class: "image"%></label>
+							<label for="challenge_type_deb_3" class="non-selected" id="choix2"><span class= "texte">Duel</br>par équipes</span><%= image_tag ("new-challenge.png"), class: "image"%></label>
 						</div>
 						<div class="emotion2" id='typedeb2'>
 							<%= radio_button_tag "challenge[type_deb]", 4, challenge.type_deb == 4 %>
@@ -28,7 +28,7 @@
 				    	
 							
 							<%= radio_button_tag "challenge[type_deb]", 8, challenge.type_deb == 8 %>
-							<label for="challenge_type_deb_8" class="non-selected" id="choix4"><span class= "texte">Quatre coins par équipe</span><%= image_tag ("new-challenge.png"), class: "image"%></label>
+							<label for="challenge_type_deb_8" class="non-selected" id="choix4"><span class= "texte">Quatre coins par équipes</span><%= image_tag ("new-challenge.png"), class: "image"%></label>
 																				
 						</div>
 					<div>	
