--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -144,11 +144,11 @@
 		<div class="container">
 			<div class="row" id="footer2">
 				<div class="row" id="footer3">
-					<li class="first"><%= link_to "Qui sommes-nous?", about_path, class: "lien"%></li>
+					<li class="first"><%= link_to "Moutoners, hein?", about_path, class: "lien"%></li>
 					<li class: "tiret">|<li>
 					<li><%= link_to "F.A.Q.", faq_path, class: "lien"%></li>
 					<li class: "tiret">|<li>
-					<li><%= link_to "Astuces dialectiques", presse_path, class: "lien"%></li>										
+					<li><%= link_to "Présentation du jury", presse_path, class: "lien"%></li>										
 					<li class: "tiret">|<li>
 					<li><%= link_to "Contact", contact_path, class: "lien"%></li>										
 					<li class: "tiret">|<li>
