--- a/app/views/static_pages/faq.html.erb
+++ b/app/views/static_pages/faq.html.erb
@@ -20,7 +20,10 @@
 			</div>
 			<div class="texte">
 				Moutoners est un réseau social entièrement dédié au débat et à l'échange d'idées.
-				Nous essayons de garder une ligne éditoriale de qualité, pour élever le débat 
+				Il y a 3 genres de débats :</br></br>
+					<h3>- Experts</h3> Nous essayons de contacter des experts pour venir débattre d'un sujet précis. Vous pouvez voter pour l'expert qui vous semble le plus pertinent, et vous pouvez commenter.</br></br>
+					<h3>- Ouvert</h3> Nous fixons les sujets, et vous participez au débat. Quand nous jugerons que le débat est clos, et que peu de nouveaux arguments peuvent être encore apportés nous clorons le débat, et nous le résumeront en sélectionnant les meilleurs arguments.</br></br>
+					<h3>- Défis</h3> Tu peux créer un défi, rejoindre un défi, inviter des "connaissances" à un défi. Le gagnant du défi sera désigné grâce au vote. Il existe 4 types de défis : Le 1vs1 (lincoln douglas debate), le 1vs1 par équipes (american parliamentary debate), le débat 4 coins (four corner debate) et enfin le débat 4 coins par équipes (british parliamentary debate).
 			</div>
 		</div>
 	</div>
@@ -32,10 +35,13 @@
 			<div class="bleu">
 			</div>
 			<div class="titre">
-				Au fait, Moutoners c'est quoi ?
+				Et les groupes, ça marche comment ?
 			</div>
 			<div class="texte">
-				Moutoners est un site entièrement dédié au débat. Nous essayons de garder une ligne éditoriale de qualité, pour élever le débat 
+				Le groupe, est un mini-Moutoners à l'intérieur de Moutoners. Dans un groupe tu peux avoir des discussions, des débats ouverts ainsi que des défis. Les débats ouverts et les défis ne seront accessibles que si tu appartiens au groupe.</br></br>
+				<h3>Comment accéder au groupe?</h3>
+				Tu peux créer un groupe, tu seras le responsable du groupe. En tant que responsable tu peux inviter certaines personnes à faire partie de ton groupe. Si tu reçois une demande de participation à ton groupe, tu peux l'accepter ou la refuser.</br>
+				Si tu souhaites participer à un groupe, tu peux demander de faire partie du groupe, et attendre ensuite le feu vert d'un responsable du groupe.
 			</div>
 		</div>
 	</div>
@@ -48,13 +54,79 @@
 			<div class="bleu">
 			</div>
 			<div class="titre">
-				Quelle est la différence entre un Défi et un Débat Ouvert?
+				Euh ... Moutoners, c'est gratuit? c'est payant?
 			</div>
 			<div class="texte">
-				Un défi est un débat à durée déterminée, proposant 4 genres 				Un défi est un débat à durée déterminée, proposant 4 genres 				Un défi est un débat à durée déterminée, proposant 4 genres 				Un défi est un débat à durée déterminée, proposant 4 genres 				Un défi est un débat à durée déterminée, proposant 4 genres 				Un défi est un débat à durée déterminée, proposant 4 genres 				Un défi est un débat à durée déterminée, proposant 4 genres 
+				Moutoners est pour l'instant gratuit. Mais comme toute société, nous devons gagnons un peu d'argent pour les serveurs, les salaires, les vacances toussa toussa ... nous avons pris le parti de ne pas faire de la publicité sur le site. 
+				</br></br>La pub sur le site aurait pu être rentable (grâce au débat, on sait ce que vous pensez, donc qui vous êtes, donc on peut mieux vous cibler et vendre ça plus cher à google). Mais pour des raisons idéologiques disons, nous avons décidé de faire un abonnement payant.</br></br>
+				2 euros par mois ou 13 euros par an, sans engagement. C'est peu et nous ne touchons que 1,4€ et 9€ respectivement (TVA, impôts, frais de paiement). Donc voilà.
 			</div>
 		</div>
 	</div>
+	
+	<div class="row">
+		<div class="row" id="faqq">
+			<div  class="blanc">
+			</div>
+			<div class="bleu">
+			</div>
+			<div class="titre">
+				Quelles sont les améliorations à prévoir?
+			</div>
+			<div class="texte">
+				Plusieurs améliorations sont prévues et sont déjà prêtes, mais nous attendons d'avoir une petite communauté pour les lancer:</br></br>
+				- Un système de points, où chaque débatteur récolte des points. Le nombre de points donnera accès (ou pas) à plusieurs trucs sympas: Défier un expert, Lancer des débats ouverts, Etre juge d'un débat.</br>
+				- Un système de juge pour les défis: Le vote populaire est souvent trompeur. Ca se saurait si la démocratie était un bon système. Les "Debating" desquels sont inspirés les défis, sont jugés par 3 juges en réalité.</br>
+				- Et bien sûr une Appli pour les tablettes! (bon en fait, celle-là elle n'est pas encore prête..)
+			</div>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="row" id="faqq">
+			<div  class="blanc">
+			</div>
+			<div class="bleu">
+			</div>
+			<div class="titre">
+				Les Quatre Types de défis, c'est quoi?
+			</div>
+			<div class="texte">
+				Les 4 types de défis ont été sélectionnés parmi une multitude de débats standards internationaux. Dans le monde anglo-saxon le "debating", est une matière régulièrement enseignée au lycée ou à l'université. Plusieurs standards et règles ont été établies. Nous avons simplifié ces règles pour les adapter à Moutoners:
+				</br></br><h3>Duel face-à-face (Lincoln Douglas Debate)</h3>
+					Intuitivement, c'est le plus simple. On énonce un sujet. Une personne est "pour" l'autre "contre". Les nuances sont acceptées, il faut bien définir le sujet au début, mais en gros c'est une discussion normale. Chacun à son tour prend la parole, 4 fois de suite.
+					</br></br><h3>Duel par équipes(American Parliamentary Debate)</h3>
+					C'est le format adopté aux Etats-unis; notamment dans la Ivy league (voir le film "The great Debaters" aux intéressés). Donc 2 équipes de 2 personnes, l'une pour, l'autre contre. Chaque l'équipe a un "leader" et un "member" normal.</br></br>
+					L'ordre est le suivant: </br>
+						1- Leader de l'équipe "pour". (Prime minister)</br>
+						2- Leader de l'équipe "contre". (Leader of the Opposition)</br>
+						3- Member de l'équipe "pour". (Member of the Government)</br>
+						4- Member de l'équipe "contre". (Member of the Opposition)</br>
+						5- Leader de l'équipe "contre". (Leader of the Opposition)</br>
+						6- Leader de l'équipe "pour". (Prime minister)
+						
+			   </br></br><h3>4 coins individuel (Four corner debate)</h3>
+			   C'est un format plus "débutant". Il n'y a pas de technique particulière. On lance un sujet, et chaque personne choisit sa position entre les quatre positions suivantes: "Pour", "Contre", "Plutôt Pour", "Plutôt Contre".</br>
+			  Chacun prend la parole 2 fois, dans l'ordre énoncé plus haut: Pour => Contre => Plutôt Pour => Plutôt Contre.	
+				</br></br><h3>4 coins par équipes (British Parliamentary Debate)</h3>
+				C'est le format international pour le "debating", et c'est le format le plus technique. C'est le même principe que le 4 coins, mais en équipe de 2 personnes. Dans chaque équipe il y a un Leader et un Member. Seule différence ici, Dans les équipes "Plutôt Pour" et "Plutôt Contre" le Leader intervient en dernier. Dans les équipes "Pour" et "Contre" Le leader intervient en premier</br></br>
+				L'ordre est le suivant: </br>
+				1- Leader de l'équipe "pour" (A qui il convient également de définir le débat).</br>
+				2- Leader de l'équipe "contre"(La seule personne habilitée à contester la définition du débat).</br>
+				3- Member de l'équipe "pour".</br>
+				4- Member de l'équipe "contre".</br>
+				5- Member de l'équipe "Plutôt pour" (Il doit à la fois contrer les arguments "pour" et "contre").</br>
+				6- Member de l'équipe "Plutôt contre" (Il doit répondre aux 3 équipes précédentes).</br>
+				7- Leader de l'équipe "Plutôt pour" (Il doit répondre aux 3 équipes précédentes, et résumer le débat en faveur du pour).</br>
+				8- Leader de l'équipe "Plutôt contre" (Il doit conclure le débat. La position la plus facile a priori, mais la plus dure car s'il se rate, tout l'argumentaire contre est raté).
+						
+					
+			</div>
+		</div>
+	</div>
+	
+	
+	</br></br>
   </div>
 
 </section>
