--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -19,18 +19,18 @@
 
 @font-face {
     font-family: 'gotham';
-    src: url(font-path('gotham.eot') + "?#iefix") format('embedded-opentype'),
-         url(font-path('gotham.woff')) format('woff'), 
-         url(font-path('gotham.ttf'))  format('truetype'),
-         url(font-path('gotham.svg') + "#gotham") format('svg');
+    src: url(font-path('GothamBlack.eot') + "?#iefix") format('embedded-opentype'),
+         url(font-path('GothamBlack.woff')) format('woff'), 
+         url(font-path('GothamBlack.ttf'))  format('truetype'),
+         url(font-path('Gothamblack.svg') + "#GothamBlack") format('svg');
 }
 
 @font-face {
     font-family: 'gotham-Bold';
-    src: url(font-path('gotham-Bold.eot') + "?#iefix") format('embedded-opentype'),
-         url(font-path('gotham-Bold.woff')) format('woff'), 
-         url(font-path('gotham-Bold.ttf'))  format('truetype'),
-         url(font-path('gotham-Bold.svg') + "#gotham-Bold") format('svg');
+    src: url(font-path('GothamBold.eot') + "?#iefix") format('embedded-opentype'),
+         url(font-path('GothamBold.woff')) format('woff'), 
+         url(font-path('GothamBold.ttf'))  format('truetype'),
+         url(font-path('GothamBold.svg') + "#GothamBold") format('svg');
 }
 
 
@@ -159,8 +159,7 @@ input.ajust-input, textarea.ajust-input {
 			padding-left: 10px;
 			font-size:14px;
 			color: #000000;
-			font-family:"gotham";
-			font-weight: 700;
+			font-family:"gotham-Bold";
 		}
 	}
 }
