--- a/app/assets/stylesheets/arguments.css.scss
+++ b/app/assets/stylesheets/arguments.css.scss
@@ -123,10 +123,9 @@
 		margin-left:534px;
 		margin-top: 20px;
 		margin-bottom: -70px;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 16px;
 		color: white;
-		font-weight: bold;
 		text-align: center;
 		
 		.flags{
@@ -212,10 +211,9 @@
 		width: 80px;
 		margin-top: 20px;
 		margin-bottom: -44px;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 16px;
 		color: white;
-		font-weight: bold;
 		text-align: center;
 		
 		.texte{
@@ -386,10 +384,9 @@
 		margin-left:534px;
 		margin-top: 20px;
 		margin-bottom: -68px;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 16px;
 		color: white;
-		font-weight: bold;
 		text-align: center;
 		
 		.flags{
@@ -477,10 +474,9 @@
 		width: 80px;
 		margin-top: 20px;
 		margin-bottom: -44px;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 16px;
 		color: white;
-		font-weight: bold;
 		text-align: center;
 		
 		.texte{
@@ -656,10 +652,9 @@
 		margin-left:-80px;
 		margin-top: 20px;
 		margin-bottom: -68px;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 16px;
 		color: white;
-		font-weight: bold;
 		text-align: center;
 		
 		.flags{
@@ -753,10 +748,9 @@
 		width: 80px;
 		margin-top: 20px;
 		margin-bottom: -44px;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 16px;
 		color: white;
-		font-weight: bold;
 		text-align: center;
 		
 		.texte{
@@ -930,10 +924,9 @@
 		margin-left:-80px;
 		margin-top: 20px;
 		margin-bottom: -68px;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 16px;
 		color: white;
-		font-weight: bold;
 		text-align: center;
 		
 		.flags{
@@ -1027,10 +1020,9 @@
 		width: 80px;
 		margin-top: 20px;
 		margin-bottom: -44px;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 16px;
 		color: white;
-		font-weight: bold;
 		text-align: center;
 		
 		.texte{
@@ -1206,10 +1198,9 @@
 		margin-left:534px;
 		margin-top: 20px;
 		margin-bottom: -70px;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 16px;
 		color: white;
-		font-weight: bold;
 		text-align: center;
 		
 		.flags{
@@ -1295,10 +1286,9 @@
 		width: 80px;
 		margin-top: 20px;
 		margin-bottom: -44px;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 16px;
 		color: white;
-		font-weight: bold;
 		text-align: center;
 		
 		.texte{
