--- a/app/assets/stylesheets/doulins.css.scss
+++ b/app/assets/stylesheets/doulins.css.scss
@@ -95,10 +95,9 @@
 		#tags_list_doulin{
 		margin-left: 0px;
 		margin-top:15px;
-		font-family : "gotham";
+		font-family : "gotham-Bold";
 		font-size : 18px;
 		color: white;
-		font-weight: bold;
 		
 		.tags{
 			color: white;
@@ -286,7 +285,7 @@
 	#follow{
 	margin-top:-235px;
 	margin-left:935px;
-	height:  24px;
+	height:  25px;
 	width: 90px;
 	background-color: #808080;
 	
@@ -294,18 +293,16 @@
 	background-color: black;
 	}
 	.texte{
-		font-family: "gotham";
-		font-weight: bold;
+		font-family: "gotham-Bold";
 		font-size: 16px;
 		color: #FFF;
 		padding-left: 8px;
-		padding-top:2px;
+		padding-top:4px;
 
 	}
 	
 	.texte2{
-		font-family: "gotham";
-		font-weight: bold;
+		font-family: "gotham-Bold";
 		font-size: 16px;
 		color: #FFF;
 		padding-left: 12px;
