--- a/app/assets/stylesheets/static.css.scss
+++ b/app/assets/stylesheets/static.css.scss
@@ -56,9 +56,8 @@ text-align: center;
 		margin-left: 70px;
 		margin-right: 70px;
 		padding-top: 30px;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 16px;
-		font-weight	: bold;
 		}
 	}
 	
@@ -438,9 +437,8 @@ text-align: center;
 		width: 260px;
 		padding-top:15px;
 		line-height: 20px;
-		font-weight: bold;
 		text-align: center;
-		font-family:"gotham";
+		font-family:"gotham-Bold";
 		font-size: 18px;
 		color: white;
 		margin-bottom:10px;
@@ -489,8 +487,7 @@ text-align: center;
 		
 		.via{
 		line-height: 20px;
-		font-weight: bold;
-		font-family:"gotham";
+		font-family:"gotham-Bold";
 		font-size: 18px;
 		color: white;
 		}
@@ -522,8 +519,7 @@ text-align: center;
 	margin-top: -40px;
 	padding-top: 0px;
 	line-height: 20px;
-	font-weight: bold;
-	font-family:"gotham";
+	font-family:"gotham-Bold";
 	font-size: 18px;
 	color: white;
 	z-index:3;
@@ -556,8 +552,7 @@ text-align: center;
 	position:relative;
 	margin-top: -40px;
 	line-height: 20px;
-	font-weight: bold;
-	font-family:"gotham";
+	font-family:"gotham-Bold";
 	font-size: 18px;
 	color: white;
 	z-index:3;
@@ -590,8 +585,7 @@ text-align: center;
 	position:relative;
 	margin-top: -40px;
 	line-height: 20px;
-	font-weight: bold;
-	font-family:"gotham";
+	font-family:"gotham-Bold";
 	font-size: 18px;
 	color: white;
 	z-index:3;
@@ -609,13 +603,12 @@ text-align: center;
 	margin-left: 208px;
 	margin-top: 20px;
     text-align: center;
-	font-family:"gotham";
+	font-family:"gotham-Bold";
 	font-size:18px;
 	height: 29px;
 	width: 318px;
 	background-color: #C1C1C1;
 	font-color: #000000;
-	font-weight: bold;
 	line-height: 30px;
 	}
 	
@@ -623,13 +616,12 @@ text-align: center;
 	margin-top:-29px;
 	margin-left: 538px;
     text-align: center;
-	font-family:"gotham";
+	font-family:"gotham-Bold";
 	font-size:18px;
 	height: 29px;
 	width: 318px;
 	background-color: #C1C1C1;
 	font-color: #000000;
-	font-weight: bold;
 	line-height: 30px;
 	}
 	
@@ -638,13 +630,12 @@ text-align: center;
 	margin-top: 10px;
 	margin-left: 366px;
     text-align: center;
-	font-family:"gotham";
+	font-family:"gotham-Bold";
 	font-size:18px;
 	height: 29px;
 	width: 318px;
 	background-color: #C1C1C1;
 	font-color: #000000;
-	font-weight: bold;
 	line-height: 30px;
 	}
 	
@@ -876,13 +867,12 @@ text-align: center;
 		margin-left: 0px;
 		margin-top: 20px;
 	    text-align: center;
-		font-family:"gotham";
+		font-family:"gotham-Bold";
 		font-size:18px;
 		height: 29px;
 		width: 238px;
 		background-color: #C1C1C1;
 		font-color: #000000;
-		font-weight: bold;
 		line-height: 30px;
 		}
 		
@@ -890,13 +880,12 @@ text-align: center;
 		margin-left: 250px;
 		margin-top: -29px;
 	    text-align: center;
-		font-family:"gotham";
+		font-family:"gotham-Bold";
 		font-size:18px;
 		height: 29px;
 		width: 238px;
 		background-color: #C1C1C1;
 		font-color: #000000;
-		font-weight: bold;
 		line-height: 30px;
 		}
 		
@@ -904,13 +893,12 @@ text-align: center;
 		margin-left: 500px;
 		margin-top: -29px;
 	    text-align: center;
-		font-family:"gotham";
+		font-family:"gotham-Bold";
 		font-size:18px;
 		height: 29px;
 		width: 238px;
 		background-color: #C1C1C1;
 		font-color: #000000;
-		font-weight: bold;
 		line-height: 30px;
 		}
 	}
@@ -1475,9 +1463,8 @@ z-index: 1;
 	}
 	
 	.sous-titre{
-	font-family: "gotham";
+	font-family: "gotham-Bold";
 	font-size: 16px;
-	font-weight: bold;
 	padding-top:20px;
 	text-align: left;
 	padding-left: 70px;
