--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -300,9 +300,8 @@
 		}
 		
 		.boutons-sociaux{
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 16px;
-		font-weight: bold;
 		margin-bottom: 15px;
 		
 		.boutons-sociaux2{
@@ -447,14 +446,12 @@
  	text-align: center;
 	color: black;
 	line-height: 20px;
-	font-weight: bold;
-	font-family:"gotham";
+	font-family:"gotham-Bold";
 	font-size: 18px;
 	
 	.via{
 	line-height: 20px;
-	font-weight: bold;
-	font-family:"gotham";
+	font-family:"gotham-Bold";
 	font-size: 18px;
 	color: white;
 	margin-left: 15px;
@@ -534,8 +531,7 @@
 					.texte{
 					width: 184px;
 					padding-left: 5px;
-					font-family: "gotham";
-					font-weight: bold;
+					font-family: "gotham-Bold";
 					font-size:13px;
 					margin-right: 40px;
 					}
@@ -605,8 +601,7 @@
 					.texte{
 					width: 184px;
 					padding-left: 5px;
-					font-family: "gotham";
-					font-weight: bold;
+					font-family: "gotham-Bold";
 					font-size:11px;
 					}
 					.submit-login{
