--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -228,22 +228,20 @@ input.ajust-input, textarea.ajust-input {
 	}
 		.follow{
 		margin-left:-20px;
-		height:  24px;
+		height:  25px;
 		width: 90px;
 		background-color: #808080;
 		
 		.texte{
-			font-family: "gotham";
-			font-weight: bold;
+			font-family: "gotham-Bold";
 			font-size: 16px;
 			color: #FFF;
 			padding-left: 8px;
-			padding-top:2px;
+			padding-top:4px;
 		}
 		
 		.texte2{
-			font-family: "gotham";
-			font-weight: bold;
+			font-family: "gotham-Bold";
 			font-size: 16px;
 			color: #FFF;
 			padding-left: 12px;
@@ -384,24 +382,22 @@ input.ajust-input, textarea.ajust-input {
 		
 		.follow{
 		margin-left:-20px;
-		height:  24px;
+		height:  25px;
 		width: 90px;
 		background-color: #808080;
 		
 		.texte{
-			font-family: "gotham";
-			font-weight: bold;
+			font-family: "gotham-Bold";
 			font-size: 16px;
 			color: #FFF;
 			padding-left: 8px;
-			padding-top:2px;
+			padding-top:4px;
 			
 		}
 		
 		
 		.texte2{
-			font-family: "gotham";
-			font-weight: bold;
+			font-family: "gotham-Bold";
 			font-size: 16px;
 			color: #FFF;
 			padding-left: 12px;
@@ -581,23 +577,21 @@ input.ajust-input, textarea.ajust-input {
 	
 	.follow{
 	margin-left:-20px;
-	height:  24px;
+	height:  25px;
 	width: 90px;
 	background-color: #808080;
 	
 	.texte{
-		font-family: "gotham";
-		font-weight: bold;
+		font-family: "gotham-Bold";
 		font-size: 16px;
 		color: #FFF;
 		padding-left: 8px;
-		padding-top:2px;
+		padding-top:4px;
 		
 	}
 	
 	.texte2{
-		font-family: "gotham";
-		font-weight: bold;
+		font-family: "gotham-Bold";
 		font-size: 16px;
 		color: #FFF;
 		padding-left: 12px;
