--- a/app/assets/stylesheets/challenges.css.scss
+++ b/app/assets/stylesheets/challenges.css.scss
@@ -1086,9 +1086,8 @@
 				margin-left: 0px;
 				margin-right:0px;
 				margin-top:15px;
-				font-family : "gotham";
+				font-family : "gotham-Bold";
 				font-size : 18px;
-				font-weight: bold;
 				color: white;
 					.tags{
 					color: white;
@@ -1310,7 +1309,7 @@
 	#follow{
 	margin-top:-383px;
 	margin-left:910px;
-	height:  24px;
+	height:  25px;
 	width: 90px;
 	background-color: #808080;
 	
@@ -1319,17 +1318,15 @@
 	}
 	
 	.texte{
-		font-family: "gotham";
-		font-weight: bold;
+		font-family: "gotham-Bold";
 		font-size: 16px;
 		color: #FFF;
 		padding-left: 8px;
-		padding-top:2px;
+		padding-top:4px;
 	}
 	
 	.texte2{
-		font-family: "gotham";
-		font-weight: bold;
+		font-family: "gotham-Bold";
 		font-size: 16px;
 		color: #FFF;
 		padding-left: 12px;
@@ -1656,9 +1653,8 @@
 			margin-left: 15px;
 			margin-right:15px;
 			margin-top:15px;
-			font-family : "gotham";
+			font-family : "gotham-Bold";
 			font-size : 18px;
-			font-weight: bold;
 			color: white;
 				.tags{
 				color: white;
@@ -1878,7 +1874,7 @@
 	#follow{
 	margin-top:-345px;
 	margin-left:910px;
-	height:  24px;
+	height:  25px;
 	width: 90px;
 	background-color: #808080;
 	
@@ -1887,17 +1883,15 @@
 	}
 	
 	.texte{
-		font-family: "gotham";
-		font-weight: bold;
+		font-family: "gotham-Bold";
 		font-size: 16px;
 		color: #FFF;
 		padding-left: 8px;
-		padding-top:2px;
+		padding-top:4px;
 	}
 	
 	.texte2{
-		font-family: "gotham";
-		font-weight: bold;
+		font-family: "gotham-Bold";
 		font-size: 16px;
 		color: #FFF;
 		padding-left: 12px;
@@ -2390,9 +2384,8 @@
 				margin-left: 0px;
 				margin-right:0px;
 				margin-top:15px;
-				font-family : "gotham";
+				font-family : "gotham-Bold";
 				font-size : 18px;
-				font-weight: bold;
 				color: white;
 					.tags{
 					color: white;
@@ -2756,7 +2749,7 @@
 	#follow{
 	margin-top:-383px;
 	margin-left:910px;
-	height:  24px;
+	height:  25px;
 	width: 90px;
 	background-color: #808080;
 	
@@ -2764,18 +2757,16 @@
 		background-color: black;
 	}
 	.texte{
-		font-family: "gotham";
-		font-weight: bold;
+		font-family: "gotham-Bold";
 		font-size: 16px;
 		color: #FFF;
 		padding-left: 8px;
-		padding-top:2px;
+		padding-top:4px;
 		
 	}
 	
 	.texte2{
-		font-family: "gotham";
-		font-weight: bold;
+		font-family: "gotham-Bold";
 		font-size: 16px;
 		color: #FFF;
 		padding-left: 12px;
