--- a/app/assets/stylesheets/comments.css.scss
+++ b/app/assets/stylesheets/comments.css.scss
@@ -18,10 +18,9 @@
 	width: 90px;
 	margin-top:-40px;
 	margin-left:60px;
-	font-family:"gotham";
+	font-family:"gotham-Bold";
 	font-size:14px;
 	padding-top:4px;
-	font-weight: bold;
 	}
 	
 	#content{
@@ -126,10 +125,9 @@
 #erase{
 	margin-left: 270px;
 	width: 80px;
-	font-family: "gotham";
+	font-family: "gotham-Bold";
 	font-size: 16px;
 	color: white;
-	font-weight: bold;
 	text-align: center;
 	margin-bottom: 15px;
 	
