--- a/app/assets/stylesheets/groups.css.scss
+++ b/app/assets/stylesheets/groups.css.scss
@@ -51,12 +51,11 @@
 	
 		.rejoindre{
 		background-color: #C9C9C9;
-		font-family:"gotham";
+		font-family:"gotham-Bold";
 		color: white;
 		font-size: 18px;
 		height: 30px;
 		padding-top: 10px;
-		font-weight: bold;
 		text-align: center;
 		
 			.join{
@@ -234,8 +233,7 @@
 			.texte{
 			background-color: black;
 			Color: white;
-			font-family:"gotham";
-			font-weight: bold;
+			font-family:"gotham-Bold";
 			font-size: 14px;
 			text-align: center;
 			padding-left: 5px;
@@ -251,8 +249,7 @@
 			text-align: center;
 			background-color: black;
 			Color: white;
-			font-family:"gotham";
-			font-weight: bold;
+			font-family:"gotham-Bold";
 			font-size: 14px;
 			height:24px;
 			padding-top: 5px;
@@ -363,9 +360,8 @@
 			margin-right: 10px;
 			margin-top: 9px;
 			margin-bottom: 10px;
-			font-family: "gotham";
+			font-family: "gotham-Bold";
 			font-size: 14px;
-			font-weight: bold;
 			color: white;
 			background-color:#A3A3A3;
 			height: 28px;
@@ -477,10 +473,9 @@
 				.field1{
 				margin-top:13px;
 				::-webkit-input-placeholder {
-				   font-family: "gotham";
+				   font-family: "gotham-Bold";
 					font-size: 15px;
 					letter-spacing: 0px;
-					font-weight: bold;
 				}
 				.field{
 					width: 325px;
@@ -499,9 +494,8 @@
 				.submit{
 					margin-top: 3px;
 					background-color:#A3A3A3;
-					font-family:"gotham";
+					font-family:"gotham-Bold";
 					font-size: 16px;
-					font-weight: bold;
 					padding: 2px 8px 5px 8px;
 					border: none;
 					border-radius: 0px;
@@ -525,9 +519,8 @@
 		#profile-header{
 		margin-top: 17px;
 		margin-bottom: 40px;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-style: italic;
-		font-weight: bold;
 		font-size: 20px;
 		text-align: center;
 		width: 670px;
