--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -57,11 +57,10 @@ header {
 		padding-top: 5px;
 		background-color: #A3A3A3;
 		color: black;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 15px;
 		text-align: center;
 		color: white;
-		font-weight: bold;
 		
 		.chiffre{
 			font-size: 15px;
@@ -110,8 +109,7 @@ header {
 			.texte{
 			width: 184px;
 			padding-left: 4px;
-			font-family: "gotham";
-			font-weight: bold;
+			font-family: "gotham-Bold";
 			font-size:12px;
 			}
 
@@ -123,8 +121,7 @@ header {
 			.texte{
 			width: 184px;
 			padding-left: 0px;
-			font-family: "gotham";
-			font-weight: bold;
+			font-family: "gotham-Bold";
 			font-size:11px;
 				text-align: center;
 			}
@@ -164,8 +161,7 @@ header {
 				background-color:#A3A3A3;
 				text-align:center;
 				margin-top: 10px;
-				font-family: "gotham";
-				font-weight: bold;
+				font-family: "gotham-Bold";
 				color: white;
 				font-size: 15px;
 				text-align: center;
@@ -183,9 +179,8 @@ header {
 				height: 35px;
 				
 				::-webkit-input-placeholder {
-				   font-family: "gotham";
+				   font-family: "gotham-Bold";
 					font-size: 15px;
-					font-weight: bold;
 					color: #A3A3A3;
 				}	
 					#search-text{
