--- a/app/assets/stylesheets/arguments.css.scss
+++ b/app/assets/stylesheets/arguments.css.scss
@@ -339,9 +339,8 @@
 		width: 112px;
 		margin-left:222px;
 		margin-top:-31px;
-		font-family:"gotham";
+		font-family:"gotham-Bold";
 		font-size:16px;
-		font-weight:bold;
 		padding: 5px 10px 5px 10px;
 		background-color:#839AB2;
 		color:white;
@@ -605,9 +604,8 @@
 		width: 112px;
 		margin-left:222px;
 		margin-top:-31px;
-		font-family:"gotham";
+		font-family:"gotham-Bold";
 		font-size:16px;
-		font-weight:bold;
 		padding: 5px 10px 5px 10px;
 		background-color:#808080;
 		color:white;
@@ -878,9 +876,8 @@
 		width: 112px;
 		margin-left:222px;
 		margin-top:-31px;
-		font-family:"gotham";
+		font-family:"gotham-Bold";
 		font-size:16px;
-		font-weight:bold;
 		padding: 5px 10px 5px 10px;
 		background-color:#A54952;
 		color:white;
@@ -1150,9 +1147,8 @@
 		width: 112px;
 		margin-left:222px;
 		margin-top:-31px;
-		font-family:"gotham";
+		font-family:"gotham-Bold";
 		font-size:16px;
-		font-weight:bold;
 		padding: 5px 10px 5px 10px;
 		background-color:#A54952;
 		color:white;
@@ -1414,9 +1410,8 @@
 		width: 112px;
 		margin-left:222px;
 		margin-top:-31px;
-		font-family:"gotham";
+		font-family:"gotham-Bold";
 		font-size:16px;
-		font-weight:bold;
 		padding: 5px 10px 5px 10px;
 		background-color:#839AB2;
 		color:white;
