--- a/app/assets/stylesheets/static.css.scss
+++ b/app/assets/stylesheets/static.css.scss
@@ -89,9 +89,8 @@ text-align: center;
 		margin-left: 70px;
 		margin-right: 70px;
 		padding-top: 30px;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 16px;
-		font-weight	: bold;
 		}
 	}
 	
@@ -123,9 +122,8 @@ text-align: center;
 		margin-left: 70px;
 		margin-right: 70px;
 		padding-top: 30px;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 16px;
-		font-weight	: bold;
 		}
 	}
 	
@@ -157,9 +155,8 @@ text-align: center;
 		margin-left: 70px;
 		margin-right: 70px;
 		padding-top: 30px;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 16px;
-		font-weight	: bold;
 		}
 	}
 
@@ -265,9 +262,8 @@ text-align: center;
 		margin-left: 70px;
 		margin-right: 70px;
 		padding-top: 30px;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 16px;
-		font-weight	: bold;
 		}
 	}
 	
@@ -313,9 +309,8 @@ text-align: center;
 		margin-left: 70px;
 		margin-right: 70px;
 		padding-top: 30px;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 16px;
-		font-weight	: bold;
 		}
 	}
 	
@@ -362,9 +357,8 @@ text-align: center;
 		margin-left: 70px;
 		margin-right: 70px;
 		padding-top: 30px;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 16px;
-		font-weight	: bold;
 		}
 	}
 	
@@ -411,9 +405,8 @@ text-align: center;
 		margin-left: 70px;
 		margin-right: 70px;
 		padding-top: 30px;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 16px;
-		font-weight	: bold;
 		}
 	}	
     #hero {
