--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -76,7 +76,7 @@
 								<%= link_to image_tag(current_user.avatar.url(:medium)), current_user, class: "image"%>
 							</div>
 							<div class="nom">
-								<%= link_to current_user.fitting_name, current_user, class: "nom"%>
+								<%= link_to current_user.fitting_name, current_user%>
 							</div>
 						</div>
 					</div>
