--- a/app/assets/stylesheets/arguments.css.scss
+++ b/app/assets/stylesheets/arguments.css.scss
@@ -1036,7 +1036,7 @@
 	
 	#rouge{
 	word-wrap:break-word;
-	background-color:#FFA1A1;
+	background-color:#FF9090;
 	margin-top: 20px;
 	width: 534px;
 	min-height:170px;
