--- a/app/views/challenges/_lincoln_douglas.html.erb
+++ b/app/views/challenges/_lincoln_douglas.html.erb
@@ -3,7 +3,7 @@
 	<div class="row" id="ld-title">
 		
 		<div class="row" id="ld-image-superieure">
-			<%= image_tag "image-ld-01.png", class: "image"%>
+			<%= image_tag "5-01.png", class: "image"%>
 			<div class="image-sign">
 				<%= image_tag("signe-defi.png", alt: "Moutoners", class: "image2")%>
 			</div>
@@ -180,21 +180,6 @@
 		</div>
 	</div>
 
-		<% unless current_user && current_user.in_challenge?(@challenge)%>
-		<% if @challenge.users.count < 2%>
-			<% numéro = @challenge.lincoln_douglas_position_left.shuffle.first %>
-			<div class="row" id="position-aleatoire">
-			<% if numéro == 1 %>
-				<div class="numero"><a><%= link_to("PRENDRE PARTI ALEATOIREMENT".html_safe,
-		              join_one_challenge_path(@challenge) ,:method => :post) %></a></div>
-			<% else %>
-				<div class="numero"><a><%= link_to("PRENDRE PARTI ALEATOIREMENT".html_safe,
-		              join_two_challenge_path(@challenge) ,:method => :post) %></a></div>
-			<% end %>
-			</div>
-		<% end %>
-		<%end%>
-		
 
 		<div class="span1" id="follow">
 			<div class="follow">
