--- a/app/views/static_pages/faq.html.erb
+++ b/app/views/static_pages/faq.html.erb
@@ -22,7 +22,7 @@
 				Moutoners est un réseau social entièrement dédié au débat et à l'échange d'idées.
 				Il y a 3 genres de débats :</br></br>
 					<h3>- Experts</h3> Nous essayons de contacter des experts pour venir débattre d'un sujet précis. Vous pouvez voter pour l'expert qui vous semble le plus pertinent, et vous pouvez commenter.</br></br>
-					<h3>- Ouvert</h3> Nous fixons les sujets, et vous participez au débat. Quand nous jugerons que le débat est clos, et que peu de nouveaux arguments peuvent être encore apportés nous clorons le débat, et nous le résumeront en sélectionnant les meilleurs arguments.</br></br>
+					<h3>- Ouvert</h3> Nous fixons les sujets, et vous participez au débat. Quand nous jugerons que le débat est clos, et que peu de nouveaux arguments peuvent être encore apportés nous clorons le débat, et nous le résumerons en sélectionnant les meilleurs arguments.</br></br>
 					<h3>- Défis</h3> Tu peux créer un défi, rejoindre un défi, inviter des "connaissances" à un défi. Le gagnant du défi sera désigné grâce au vote. Il existe 4 types de défis : Le 1vs1 (lincoln douglas debate), le 1vs1 par équipes (american parliamentary debate), le débat 4 coins (four corner debate) et enfin le débat 4 coins par équipes (british parliamentary debate).
 			</div>
 		</div>
