--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -55,7 +55,7 @@ header {
 		width: 191px;
 		height: 22px;
 		padding-top: 5px;
-		background-color: #A3A3A3;
+		background-color: #FF7575;
 		color: black;
 		font-family: "gotham-Bold";
 		font-size: 15px;
