--- a/app/assets/stylesheets/static.css.scss
+++ b/app/assets/stylesheets/static.css.scss
@@ -44,7 +44,7 @@ text-align: center;
 		
 		.introduction1{
 		margin-left: 70px;
-		margin-right: 70px;
+		margin-right: 50px;
 		padding-top: 90px;
 		font-family: "gotham";
 		font-size: 36px;
@@ -77,7 +77,7 @@ text-align: center;
 		
 		.introduction1{
 		margin-left: 70px;
-		margin-right: 70px;
+		margin-right: 50px;
 		padding-top: 90px;
 		font-family: "gotham";
 		font-size: 36px;
@@ -110,7 +110,7 @@ text-align: center;
 		
 		.introduction1{
 		margin-left: 70px;
-		margin-right: 70px;
+		margin-right: 50px;
 		padding-top: 90px;
 		font-family: "gotham";
 		font-size: 36px;
@@ -143,7 +143,7 @@ text-align: center;
 		
 		.introduction1{
 		margin-left: 70px;
-		margin-right: 70px;
+		margin-right: 50px;
 		padding-top: 90px;
 		font-family: "gotham";
 		font-size: 36px;
@@ -1862,5 +1862,22 @@ margin-left: 470px;
 	margin-left: 120px;
 	line-height: 25px;
 	}
+	}
+}
+
+
+#kallab{
+
+	.titre{
+	margin: 10px 0px 100px 50px;
+	padding-top: 10px;
+	padding-bottom: 5px;
+	height: 60px;
+	width: 300px;
+	font-size: 25px;
+	line-height: 30px;
+	background-color: #CCC;
+	font-family: "gotham";
+	text-align: center;
 	}
 }
